@@ -140,6 +140,9 @@ BUG FIXES
 	loaded.  This often lead to a message that a required package
 	was being loaded when it was not actually being loaded.
 
+    o	str(<S4.object>) made use of attributes() instead of slot(),
+	and hence didn't properly print NULL slots.
+
 
 
 	*********************************************************
